plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.121'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-${minecraft_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21) // Mojang ships Java 8 to end users, so your mod should target Java 8.

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientTest {
            client()

            programArguments.addAll '--username', 'Quarris'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
            environment "SW_TRANSLATION_API_KEY", file("SECRET.txt").text // Store in the same directory as this build.gralde file
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    flatDir {
        dirs 'lib'
    }
    maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "KosmX's maven"
        url = "https://maven.kosmx.dev/"
    }
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
}

dependencies {
    // Compile
    compileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")

    // Runtime
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

    //runtimeOnly("_:swem-forge-1.18.2:1.3.0-12")
    //implementation 'org.jetbrains:annotations:20.1.0'

    //annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_credits            : mod_credits,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

task sendWebhook {
    doLast {
        def cfUrl = project.findProperty("curseforge_file_url")
        def modrinthUrl = project.findProperty("modrinth_file_url")
        def discordChangeLog = createDiscordChangelog(cfUrl)

        def result = DiscordBuilder.createForm {
            embed {
                color = Integer.decode(project.project_color)
                author {
                    name = project.project_name
                    url = project.project_url
                }
                thumbnail {
                    url = project.project_logo
                }
                title = "$project.project_name v$project.version for $project.mc_version Released"
                url = cfUrl
                field {
                    name = "Changes:"
                    value = discordChangeLog
                }
                field {
                    name = "Downloads:"
                    value = "[$curseforge_emote Curseforge]($cfUrl)\n[$modrinth_emote Modrinth]($modrinthUrl)"
                }
                footer {
                    text = "A $project.loader_name Mod"
                    icon_url = project.loader_icon
                }
            }
        }.send(project.discord_webhook_url)

        println "Discord Webhook Response: " + result.responseCode
    }
}

String createDiscordChangelog(fullChangelogUrl) {
    def webhookChangelog = StringBuilder.newInstance()
    def changelogLines = getDiscordChangelog()
    def maxLines = Integer.decode(project.discord_webhook_changelog_line_limit)

    def lines = 0
    changelogLines.find { line ->
        if (webhookChangelog.length() == 0) {
            webhookChangelog << line
        } else {
            webhookChangelog << "\n$line"
        }
        lines++
        if (lines >= maxLines) {
            webhookChangelog << "\n(+ " + (changelogLines.length - lines) + " more) See [Full Changelog]($fullChangelogUrl)"
            return true;
        }
    }

    return webhookChangelog.toString()
}

List<String> getDiscordChangelog() {
    def changelogFile = file('changelog.md')
    List<String> strings = new ArrayList<>();

    String str = '';
    int lineCount = 0
    boolean done = false
    changelogFile.eachLine {
        if (done || it == null) {
            return
        }
        if (it.size() > 1) {
            def temp = it

            if (it.startsWith("##")) {
                return
            } else if (it.startsWith('-')) {
                temp = temp.replaceAll("(\\S+\\/\\S+)#([0-9]+)\\b", "[\$0](https://github.com/\$1/issues/\$2)");
                temp = temp.replaceAll("#([0-9]+)\\b(?!])", "[\$0](https://github.com/alaharranhonor/swdecom/issues/\$1)");
            }
            str += "$temp\n"
            if (str.length() > 900) {
                strings.add(str)
                str = ''
            }
            println str.length()
            lineCount++
            return
        } else {
            done = true
        }
    }
    strings.add(str)
    return strings
}
